webrtcbin does not handle ICE candidates in SDP sent via set-remote-description signal
Submitted by Daniel F
Link to original bug (#794810)
Description
According to JSEP section 5.10 (Applying a Remote Description), this is a MUST:
"Pair any supplied ICE candidates with any gathered local
candidates, as described in [RFC5245], Section 5.7, and start
connectivity checks with the appropriate credentials."
webrtc currently does not do this, app has to extract candidates from remote SDP and sent them one by one to webrtcbin via add-ice-candidate signal.
Version: 1.14.0